[gd_scene load_steps=35 format=2]

[ext_resource path="res://data/fonts/RobotoCondensed-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/hud.gd" type="Script" id=2]
[ext_resource path="res://src/FPS.gd" type="Script" id=3]
[ext_resource path="res://data/images/hud/sharpening/sharpening.png" type="Texture" id=4]
[ext_resource path="res://data/images/hud/sharpening/sharpening_type.png" type="Texture" id=5]
[ext_resource path="res://data/images/hud/item_bar/slot.png" type="Texture" id=6]
[ext_resource path="res://src/items_bar.gd" type="Script" id=7]
[ext_resource path="res://data/images/hud/item_bar/quantity.png" type="Texture" id=8]
[ext_resource path="res://data/images/hud/item_bar/name.png" type="Texture" id=9]
[ext_resource path="res://data/fonts/MedievalSharp.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://data/scenes/onscreen_controls.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0.196078, 0.196078, 0.196078, 1 )
Label/constants/line_spacing = 0
Label/constants/shadow_as_outline = 1
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.0141144, 0.722656, 0.0417918, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxFlat" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.84375, 0.0164795, 0.0164795, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 0.867188, 0, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="Animation" id=9]

resource_name = "blue"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("type:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolFloatArray( 0, 1, 2 ),
"transitions": PoolFloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.182877, 0.386181, 0.996094, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]

resource_name = "green"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("type:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolFloatArray( 0, 1, 2 ),
"transitions": PoolFloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.34375, 1, 0.343765, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]

resource_name = "orange"
length = 1.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("type:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolFloatArray( 0, 0.8, 1.6 ),
"transitions": PoolFloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 0.534884, 0.242188, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]

resource_name = "purple"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("type:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolFloatArray( 0, 1, 2 ),
"transitions": PoolFloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.501961, 0.235294, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]

resource_name = "red"
length = 1.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("type:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolFloatArray( 0, 0.7, 1.4 ),
"transitions": PoolFloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 0.235294, 0.235294, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]

resource_name = "white"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("type:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolFloatArray( 0, 1, 2 ),
"transitions": PoolFloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]

resource_name = "yellow"
length = 1.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("type:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolFloatArray( 0, 0.9, 0.9, 1.8, 1.8 ),
"transitions": PoolFloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 0, 1 ), Color( 1, 1, 6.62274e-08, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxTexture" id=16]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 180, 180 )
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=17]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxTexture" id=18]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="Theme" id=19]

Panel/styles/panel = SubResource( 16 )
Panel/styles/panelf = SubResource( 17 )
Panel/styles/panelnc = SubResource( 18 )

[sub_resource type="DynamicFont" id=20]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=21]

size = 24
use_mipmaps = false
use_filter = false
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=22]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=23]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolFloatArray( 0, 0.3, 1.5 ),
"transitions": PoolFloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 660, -100 ), Vector2( 660, 500 ), Vector2( 660, 500 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolFloatArray( 0, 1.5, 2 ),
"transitions": PoolFloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="hud" type="Control"]

margin_right = 1920.0
margin_bottom = 1080.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="debug" type="Label" parent="."]

anchor_left = 1
anchor_top = 1
anchor_right = 1
anchor_bottom = 1
margin_left = 300.0
margin_top = 100.0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Test"
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FPS" type="Label" parent="."]

anchor_left = 1
anchor_right = 1
margin_left = 71.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 30.0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "FPS: 60"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 3 )

[node name="names" type="Control" parent="."]

rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="action" type="Button" parent="."]

visible = false
anchor_left = 2
anchor_top = 2
anchor_right = 2
anchor_bottom = 2
margin_right = 930.0
margin_bottom = 510.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "E"
flat = false

[node name="hp" type="ProgressBar" parent="."]

editor/display_folded = true
margin_left = 10.0
margin_top = 10.0
margin_right = 1010.0
margin_bottom = 26.0
rect_clip_content = false
mouse_filter = 0
size_flags_vertical = 0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
min_value = 0.0
max_value = 150.0
step = 1.0
page = 0.0
value = 150.0
exp_edit = false
rounded = true
percent_visible = false

[node name="red_hp" type="ProgressBar" parent="hp"]

show_behind_parent = true
anchor_right = 1
anchor_bottom = 1
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
min_value = 0.0
max_value = 150.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = false

[node name="stamina" type="ProgressBar" parent="."]

margin_left = 10.0
margin_top = 31.0
margin_right = 1010.0
margin_bottom = 43.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
percent_visible = false

[node name="sharpness" type="Container" parent="."]

editor/display_folded = true
margin_left = 10.0
margin_top = 50.0
margin_right = 150.0
margin_bottom = 75.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="sword" type="TextureRect" parent="sharpness"]

anchor_right = 1
anchor_bottom = 1
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 0

[node name="type" type="TextureRect" parent="sharpness"]

self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1
anchor_bottom = 1
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 0

[node name="fading" type="AnimationPlayer" parent="sharpness"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/blue = SubResource( 9 )
anims/green = SubResource( 10 )
anims/orange = SubResource( 11 )
anims/purple = SubResource( 12 )
anims/red = SubResource( 13 )
anims/white = SubResource( 14 )
anims/yellow = SubResource( 15 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="items_bar" type="Control" parent="."]

editor/display_folded = true
anchor_top = 1
anchor_bottom = 1
margin_left = 10.0
margin_top = 165.0
margin_right = 390.0
margin_bottom = 10.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 19 )
script = ExtResource( 7 )

[node name="left_2" type="Panel" parent="items_bar"]

margin_top = 15.0
margin_right = 60.0
margin_bottom = 75.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="icon" type="TextureRect" parent="items_bar/left_2"]

anchor_right = 1
anchor_bottom = 1
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
expand = true
stretch_mode = 0

[node name="left_1" type="Panel" parent="items_bar"]

margin_left = 65.0
margin_top = 7.0
margin_right = 140.0
margin_bottom = 82.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="icon" type="TextureRect" parent="items_bar/left_1"]

anchor_right = 1
anchor_bottom = 1
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
expand = true
stretch_mode = 0

[node name="use" type="Panel" parent="items_bar"]

margin_left = 145.0
margin_right = 235.0
margin_bottom = 90.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="icon" type="TextureRect" parent="items_bar/use"]

anchor_right = 1
anchor_bottom = 1
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
expand = true
stretch_mode = 0

[node name="right_1" type="Panel" parent="items_bar"]

margin_left = 240.0
margin_top = 7.0
margin_right = 315.0
margin_bottom = 82.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="icon" type="TextureRect" parent="items_bar/right_1"]

anchor_right = 1
anchor_bottom = 1
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
expand = true
stretch_mode = 0

[node name="right_2" type="Panel" parent="items_bar"]

margin_left = 320.0
margin_top = 15.0
margin_right = 380.0
margin_bottom = 75.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="icon" type="TextureRect" parent="items_bar/right_2"]

anchor_right = 1
anchor_bottom = 1
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
expand = true
stretch_mode = 0

[node name="quantity" type="TextureRect" parent="items_bar"]

margin_left = 220.0
margin_top = 75.0
margin_right = 250.0
margin_bottom = 105.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 0

[node name="label" type="Label" parent="items_bar/quantity"]

anchor_right = 1
anchor_bottom = 1
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 20 )
text = "10"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="name" type="TextureRect" parent="items_bar"]

margin_top = 110.0
margin_right = 380.0
margin_bottom = 155.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 9 )
expand = true
stretch_mode = 0

[node name="label" type="Label" parent="items_bar/name"]

anchor_right = 1
anchor_bottom = 1
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "(Nessuna selezione)"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="notification" type="Panel" parent="."]

modulate = Color( 1, 1, 1, 0 )
anchor_right = 1
margin_left = 660.0
margin_top = 500.0
margin_right = 660.0
margin_bottom = 580.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="text" type="Label" parent="notification"]

margin_right = 600.0
margin_bottom = 80.0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 22 )
text = "Hai ottenuto: %s"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="animation" type="AnimationPlayer" parent="notification"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/show = SubResource( 23 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="players_list" type="VBoxContainer" parent="."]

editor/display_folded = true
visible = false
margin_left = 10.0
margin_top = 200.0
margin_right = 410.0
margin_bottom = 800.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="list" type="Label" parent="players_list"]

margin_left = 118.0
margin_right = 282.0
margin_bottom = 21.0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Lista dei giocatori collegati:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="inventory" type="Popup" parent="."]

editor/display_folded = true
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false

[node name="quit" type="Button" parent="inventory"]

anchor_left = 1
anchor_right = 1
margin_left = 200.0
margin_top = 50.0
margin_right = 25.0
margin_bottom = 100.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false

[node name="onscreen" parent="." instance=ExtResource( 11 )]

[node name="respawn" type="AcceptDialog" parent="."]

visible = false
anchor_left = 2
anchor_top = 2
anchor_right = 2
anchor_bottom = 2
margin_left = 100.0
margin_top = 50.0
margin_right = -100.0
margin_bottom = -50.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Respawn"
resizable = false
dialog_text = "Respawn in 5 seconds"
dialog_hide_on_ok = true

[connection signal="pressed" from="action" to="." method="_on_action_pressed"]

[connection signal="pressed" from="inventory/quit" to="." method="close_inventories"]

[connection signal="confirmed" from="respawn" to="." method="_on_respawn_confirmed"]

[connection signal="popup_hide" from="respawn" to="." method="_on_respawn_confirmed"]


